修改了一下代码逻辑, 删除无关代码; 增加了留存统计分析代码(SQL 相关).